# Differential-evolution-school-project

./: .gitmodules  CMakeLists.txt  diff_evo.cpp  diff_evo.h  diff_evo.tpp  main.cpp  structures.h  test_functions.cpp  test_functions.h
